Issue with normals

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -23,7 +23,6 @@ add_custom_target(
     DEPENDS ${SPIRV_BINARY_FILES}
 )
 
-
 set(SOURCES
     "main.cpp"
     "vulkanbase/VulkanBase.h" 
@@ -40,6 +39,14 @@ set(SOURCES
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES} ${GLSL_SOURCE_FILES}  "vulkanbase/VulkanUtil.cpp" "labwork/Week03.cpp"  "GP2_CommandPool.h" "GP2_CommandPool.cpp" "GP2_CommandBuffer.h" "GP2_CommandBuffer.cpp" "GP2_Mesh.h" "GP2_Mesh.cpp" "GP2_Buffer.h" "GP2_Buffer.cpp" "Vertex.h" "GP2_Camera.h" "GP2_Camera.cpp"     "GP2_UniformBufferObject.h"   "GP2_DescriptorPool.h" "GP2_2DGraphicsPipeline.h" "GP2_3DGraphicsPipeline.h"  )
 add_dependencies(${PROJECT_NAME} Shaders)
+
 # Link libraries
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${Vulkan_LIBRARIES} glfw)
+
+add_custom_target(copy_resources ALL)
+
+add_custom_command(TARGET copy_resources POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   ${CMAKE_SOURCE_DIR}/resources
+                   $<TARGET_FILE_DIR:${PROJECT_NAME}>/resources)
