Implemented Texture Abstraction + Fixed Texture Issues
Compiler does some whack shit, don't know why

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SOURCES
     "main.cpp"
     "vulkanbase/VulkanBase.h" 
     "vulkanbase/VulkanUtil.h"
+    "vulkanbase/VulkanUtil.cpp"
     # Add other source files here, but remove redundant and unnecessary entries
     "labwork/Week01.cpp"
     "labwork/Week02.cpp" 
@@ -40,10 +41,26 @@ set(SOURCES
     "labwork/Week06.cpp"
     "GP2_Shader.h" 
     "GP2_Shader.cpp"
-    "${STB_DIR}/stb_image.h")
+    "GP2_Mesh.h"
+    "GP2_CommandPool.h" 
+    "GP2_CommandPool.cpp" 
+    "GP2_CommandBuffer.h" 
+    "GP2_CommandBuffer.cpp"   
+    "GP2_Buffer.h" 
+    "GP2_Buffer.cpp" 
+    "Vertex.h"
+    "GP2_UniformBufferObject.h" 
+    "GP2_DescriptorPool.h" 
+    "GP2_2DGraphicsPipeline.h" 
+    "GP2_3DGraphicsPipeline.h"
+    "${STB_DIR}/stb_image.h" 
+    "GP2_Texture.h" 
+    "GP2_Texture.cpp" 
+    "GP2_DepthBuffer.h" 
+    "GP2_DepthBuffer.cpp")
 
 # Create the executable
-add_executable(${PROJECT_NAME} ${SOURCES} "vulkanbase/VulkanUtil.cpp" "GP2_CommandPool.h" "GP2_CommandPool.cpp" "GP2_CommandBuffer.h" "GP2_CommandBuffer.cpp" "GP2_Mesh.h"  "GP2_Buffer.h" "GP2_Buffer.cpp" "Vertex.h" "GP2_UniformBufferObject.h" "GP2_DescriptorPool.h" "GP2_2DGraphicsPipeline.h" "GP2_3DGraphicsPipeline.h" "GP2_Shader.cpp")
+add_executable(${PROJECT_NAME} ${SOURCES})
 add_dependencies(${PROJECT_NAME} Shaders)
 
 # Include directories
