Adding PBR Pipeline

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -25,7 +25,7 @@ endforeach(GLSL)
 add_custom_target(
     Shaders 
     DEPENDS ${SPIRV_BINARY_FILES}
-)
+)  
 
 set(SOURCES
     "main.cpp"
@@ -57,7 +57,7 @@ set(SOURCES
     "GP2_Texture.h" 
     "GP2_Texture.cpp" 
     "GP2_DepthBuffer.h" 
-    "GP2_DepthBuffer.cpp")
+    "GP2_DepthBuffer.cpp" "PBRGraphicsPipeline.h" )
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
